crates/solidity-v2/testing/snapshots/cst_output/generated/from_v1/SourceUnit/UnnamedFunctionDefinition/public_attribute/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected OpenBrace. One of AtKeyword_Unreserved, ErrorKeyword_Unreserved, ExternalKeyword_Reserved, FinneyKeyword_Unreserved, FromKeyword_Unreserved, GlobalKeyword_Unreserved, Identifier, ImmutableKeyword_Reserved, InternalKeyword_Reserved, LayoutKeyword_Unreserved, OpenBracket, OverrideKeyword_Reserved, PayableKeyword_Reserved, PrivateKeyword_Reserved, PublicKeyword_Reserved, PureKeyword_Reserved, ReturnsKeyword_Reserved, RevertKeyword_Unreserved, SzaboKeyword_Unreserved, TransientKeyword_Unreserved, ViewKeyword_Reserved was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/generated/from_v1/SourceUnit/UnnamedFunctionDefinition/public_attribute/input.sol:5:20]
   │
 5 │ function () public {}
   │                    ┬  
   │                    ╰── Error occurred here.
───╯
